Rettet NN afsnit

--- a/Bibliography/Books.bib
+++ b/Bibliography/Books.bib
@@ -104,3 +104,13 @@
   editor    = {Yoshua Bengio},
   volume    = {15},
 } % https://www.cs.toronto.edu/~rsalakhu/papers/srivastava14a.pdf
+
+
+@book{NNDesign,
+  title     ={Neural Network Design},
+  author    ={Hagan, M.T. and Demuth, H.B. and Beale, M.H.},
+  isbn      ={9789812403766},
+  url       ={https://books.google.dk/books?id=MuzAXwAACAAJ},
+  year      ={2003},
+  publisher ={Vikas Publishing House}
+}
